examples/eks-managed-node-group/ingress/glwmx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-glwmx
  namespace: glwmx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/7ac59956-8592-43a9-b603-bfef5f0eedb1
    alb.ingress.kubernetes.io/actions.redirect-to-glwco: '{"type":"redirect","redirectConfig":{"host":"glw.com.co","path":"/#{path}","port":"443","protocol":"HTTPS","query":"#{query}","statusCode":"HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: glw.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-glwco
                port:
                  name: use-annotation
    - host: www.glw.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-glwco
                port:
                  name: use-annotation
    - host: landing.glw.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glwmx-prodland-svc
                port:
                  number: 80
